# taktkrone-i

./: .editorconfig  .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  coverage.xml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_request.md  bug_report.md  feature_request.md  operator_request.md  operator_scenario.md
.github/workflows/: ci.yml  tests.yml
configs/data/: default.yaml
configs/deployment/: production.yaml
configs/eval/: benchmark_config.yaml  benchmark_suite.yaml
configs/evaluation/: comprehensive_eval.yaml
configs/operators/: default.json  production.json
configs/prompts/: chat_templates.yaml
configs/serving/: api.yaml  server_config.yaml
configs/training/: lora_baseline.yaml  lora_efficient.yaml  qlora_efficient.yaml  sft_baseline.yaml
data/real/: real_incidents.json  train_dialogues.jsonl
data/real/evaluation/: diagnosis_cases.json  summarization_cases.json
data/real/evaluation_comprehensive/: diagnosis_test_cases.json  recovery_ranking_cases.json  safety_guard_cases.json  summarization_test_cases.json
data_contracts/: README.md  action_recommendation.schema.json  experiment.schema.json  incident_record.schema.json  occ_dialogue_sample.schema.json  realtime_event.schema.json  synthetic_scenario.schema.json
dataset_cards/: synthetic_occ_corpus.md
docker/: Dockerfile  docker-compose.yml
docs/architecture/: SYSTEM_DESIGN.md
docs/datasets/: ADDING_OPERATORS.md  DATASET_STRATEGY.md  DATA_QUALITY_CHECKLIST.md  DATA_SPECIFICATION.md  TAXONOMY.md
docs/evaluation/: BENCHMARK_DESIGN.md
docs/safety/: GUARDRAIL_POLICY.md  SAFETY_PROTOCOL.md
docs/taxonomy/: OPERATIONAL_ONTOLOGY.md
docs/training/: EXPERIMENT_TRACKING.md  TRAINING_STRATEGY.md
evaluation_results/: comprehensive_evaluation_20260327_152622.json  performance_summary.json
examples/: sample_scenarios.jsonl
huggingface_dataset/: README.md  taktkrone_occ_corpus.py  test.jsonl
huggingface_model/: README.md  adapter_config.json  adapter_model.safetensors  adapter_model.safetensors.index.json  config.json  generation_config.json  special_tokens_map.json  tokenizer_config.json  training_info.json
model_cards/: taktkrone-lora-v0.1.md  taktkrone-sft-baseline-v0.1.md  taktkrone_production_v1.0.md
notebooks/: evaluation.ipynb  quickstart.ipynb  training.ipynb
occlm/: __init__.py
occlm/analytics/: __init__.py
occlm/cli/: __init__.py  evaluate.py  ingest.py  serve.py  synthesize.py  train.py
occlm/evaluation/: __init__.py  benchmark.py  metrics.py
occlm/evaluation/benchmarks/: __init__.py  disruption_diag.py  occ_sum_eval.py  recovery_rank.py  retrieval_qa.py  safety_guard.py  topo_consist.py
occlm/guardrails/: __init__.py
occlm/ingestion/: __init__.py
occlm/ingestion/adapters/: __init__.py  bart.py  generic_gtfs.py  mbta.py  mta.py  tfl.py  wmata.py
occlm/ingestion/parsers/: __init__.py  gtfs_static.py
occlm/normalization/: __init__.py  normalizer.py  validator.py
occlm/ontology/: __init__.py
occlm/retrieval/: __init__.py  embedder.py  rag_pipeline.py  vector_store.py
occlm/schemas/: __init__.py
occlm/serving/: __init__.py  api.py  audit_logger.py  engine.py  guardrails.py
occlm/simulation/: __init__.py
occlm/storage/: __init__.py  parquet_store.py
occlm/synthesis/: __init__.py  dialogue_generator.py  disruption_patterns.py  quality_scorer.py  scenario_engine.py  topology_simulator.py
occlm/synthesis/templates/: __init__.py  occ_conversations.py  scenario_templates.py
occlm/training/: __init__.py  config.py  data.py  data_loader.py  lora_trainer.py  sft_trainer.py  tracking.py  trainer.py
occlm/ui/: __init__.py  demo.py
paper/: CONSISTENCY_CHECK.md  README.md  main.tex  references.bib
paper/figures/: figure1_dataset_composition.py  figure2_benchmark_results.py  figure3_calibration_operational_effect.py
scripts/: deploy_production.sh
scripts/evaluate/: run_all_benchmarks.sh
scripts/ingest/: ingest_all_operators.sh
scripts/preprocess/: prepare_training_data.sh
scripts/serve/: deploy_production.sh  stop_services.sh
scripts/synthesize/: generate_training_data.sh
scripts/train/: train_all_models.sh
tests/: __init__.py  conftest.py
tests/fixtures/: sample_dialogue.json  sample_recommendation.json  sample_scenario.json
tests/fixtures/integration/: sample_incidents.json
tests/fixtures/unit/ingestion/mbta/: mbta_vehicles.json
tests/fixtures/unit/ingestion/mta/: mta_vehicle_positions.json
tests/integration/: __init__.py
tests/integration/ingestion/: __init__.py  test_ingestion_pipeline.py
tests/load/: __init__.py  test_api_load.py
tests/regression/: __init__.py
tests/unit/: __init__.py  test_core_modules.py  test_schemas.py  test_storage.py
tests/unit/ingestion/: __init__.py  test_additional_adapters.py  test_mta.py  test_normalizer.py  test_normalizer_additional.py
tests/unit/synthesis/: test_synthesis.py  test_synthesis_branches.py
