[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taktkrone-i"
version = "1.0.0"
description = "Metro Operations Control Center Language Model"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Gustav Olaf Yunus Laitinen-Fredriksson Lundström-Imanov", email = "dev@taktkrone.ai"},
]
maintainers = [
    {name = "Gustav Olaf Yunus Laitinen-Fredriksson Lundström-Imanov", email = "dev@taktkrone.ai"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "ai",
    "llm",
    "transportation",
    "metro",
    "operations-control-center",
    "nlp",
    "language-model",
    "llama",
    "lora"
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "peft>=0.6.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.4.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "gradio>=3.50.0",
    "streamlit>=1.28.0",
    "typer>=0.9.0",
    "rich>=13.5.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "aiohttp>=3.8.0",
    "redis>=4.6.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "wandb>=0.15.0",
    "mlflow>=2.7.0",
    "tensorboard>=2.14.0",
    "rouge-score>=0.1.2",
    "evaluate>=0.4.0",
    "nltk>=3.8.0",
    "spacy>=3.6.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    "vllm>=0.2.0",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.2.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
    "ruff>=0.0.290",
    "black>=23.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
    "jsonschema>=4.19.0",
]
gpu = [
    "torch>=2.0.0",
    "faiss-gpu>=1.7.4",
]
serving = [
    "vllm>=0.2.0",
    "triton>=2.0.0",
]

[project.urls]
Homepage = "https://taktkrone.ai"
Repository = "https://github.com/olaflaitinen/taktkrone-i"
Documentation = "https://taktkrone.ai/docs"
"Bug Tracker" = "https://github.com/olaflaitinen/taktkrone-i/issues"
"Model on HuggingFace" = "https://huggingface.co/olaflaitinen/taktkrone-i"
"Dataset on HuggingFace" = "https://huggingface.co/datasets/olaflaitinen/taktkrone-occ-corpus"

[project.scripts]
occlm = "occlm.cli:main"
taktkrone = "occlm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["occlm*"]

[tool.setuptools.package-data]
occlm = ["data/**/*", "configs/**/*", "py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["notebooks/", ".git/", ".venv/", "build/", "dist/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise in except without from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"notebooks/*.ipynb" = ["ALL"]
"huggingface_dataset/*.py" = ["I001"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "datasets.*",
    "peft.*",
    "accelerate.*",
    "bitsandbytes.*",
    "wandb.*",
    "mlflow.*",
    "vllm.*",
    "faiss.*",
    "chromadb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=occlm",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
]
norecursedirs = [
    ".pytest_tmp",
    "_pytest_tmp",
    ".pytest_cache",
    "htmlcov",
]
